git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@300 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -24,14 +24,15 @@ Corey's TO DO list:
 * configurable start page, like start on dashboard
 * relationships in print?
 * Documentation improvements:
+* POP3Main, multiple filters
+* map emails to ids
 
 workflow.cs
 ldap
 blog about lucene.net
 
-
 -----------------------------------------------------------------------
-Version 3.0.9   01/xx/2009   (svn revision xxx)
+Version 3.0.9   01/25/2009   (svn revision 300)
 -----------------------------------------------------------------------
 
 * Fixed a bug with send_email.aspx introduced in version 3.0.8.  Prior
@@ -39,6 +40,9 @@ to version 3.0.8, list of email addresses wasn't taking into account
 the users organization permissions.   I fixed that in 3.0.8 but broke 
 the logic related to project permissions.   With this release, both
 organization and project permissions should be working (I hope).
+
+* Updated included Web.config so that the session timeout is 120 
+minutes.
 
 -----------------------------------------------------------------------
 Version 3.0.8   01/18/2009   (svn revision 298)
