git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@303 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -29,6 +29,16 @@ workflow.cs
 ldap
 blog about lucene.net
 
+image/x-png
+image/pjpeg
+
+
+-----------------------------------------------------------------------
+Version 3.1.1   02/07/2009   (svn revision XXX)
+-----------------------------------------------------------------------
+
+* Fixed bug with "show images inline" when MIME type was pjpeg or x-png.
+
 -----------------------------------------------------------------------
 Version 3.1.0   01/31/2009   (svn revision 302)
 -----------------------------------------------------------------------
