git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@307 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -25,13 +25,12 @@ Corey's TO DO list:
 * Documentation improvements:
 * POP3Main, multiple filters, workflow.cs, ldap
 * blog about lucene.net
-
+* links on posts don't respect permissions
+* Upgrade to CKeditor
 
 -----------------------------------------------------------------------
-Version 3.1.2   02/xx/2009   (svn revision xxx)
+Version 3.1.2   02/15/2009   (svn revision xxx)
 -----------------------------------------------------------------------
-
-* check multiline edits in chrome
 
 * Version 3.0.5 broke the features where BugTracker.NET records the
 most recent login date of a user.  Fixed in this version.   
@@ -43,6 +42,10 @@ feature.
 editor".  It's really a bug in fckEditor, but I found a workaround.
 
 * Fixed [+], [-] links to resize rich text editing area.
+
+* Fixed bug when inserting a null into the qn_last_exception column of
+the queued_notification table.  Discussed here:
+http://sourceforge.net/forum/forum.php?thread_id=3015629&forum_id=226938
 
 -----------------------------------------------------------------------
 Version 3.1.1   02/07/2009   (svn revision 304)
