--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -30,6 +30,13 @@ Corey's TO DO list:
 * Lucene search of custom text fields.
 
 -----------------------------------------------------------------------
+Version 3.1.3   02/XX/2009   (svn revision XXX)
+-----------------------------------------------------------------------
+
+* Added tip for short description.  If it's longer than the INPUT and 
+you hover over it, you can see all the text.
+
+-----------------------------------------------------------------------
 Version 3.1.2   02/21/2009   (svn revision 309)
 -----------------------------------------------------------------------
 
