git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@327 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -92,6 +92,8 @@ bug happen, but it might involve IIS using Windows Authentication.
 Thanks again to Sergey Vasiliev for spending a lot of time with me on
 this bug.
 
+* Added og_can_assign_to_internal_users
+
 -----------------------------------------------------------------------
 Version 3.1.6   04/04/2009   (svn revision 321)
 -----------------------------------------------------------------------
